tests/fixtures/invalid/pow_list_str_int.py
# Cannot call pow() with List[int], Str, Int
x = pow([1, 2, 3], "hello", 1)
